Current version (1.2.0) changelog
	[FEATURES]
		* Add debug mode
		* Create a C++ class to use Yall
		* Allow header format modification
		* Allow call header format modification
		* Remove the message length limit (unlimited log message length)
		* Allow changing the indent width inside for formatter
	[FIX]
		* Fix YALL_CALL_LOG buffer overrun
		* Use localtime_r instead of localtime
		* Change unit test binary name (now 'yall_unit')
		* Update soname (yall.so -> yall.so.major.minor -> yall.so.major.minor.patch)
		* Install target now install 'README.md' and 'changelog' to 'share' folder prefixed with 'yall_'
		* Delete old log file only when 's->output_file' is defined, avoid to call 'unlink()' with 'NULL'
	[TEST]
		* Add 'make checkstyle' target to run checkstyle on sources
		* Add 'make validate' target which run script checking valgrind, unit, coverage, build, checkstyle...
		* Allow to install on system, in custom folder or as CI_DEPLOY (which allow 'make dist')
	[CI]
		* On Travis : run validate target

Version 1.1.0 changelog
	[FEATURES]
		* Remove the old log file at subsystem creation
		* Count number of initializations, and allow to close all instances of
		the library
		* Allow subsystem activation / disactivation easily
		* Improve function call subsystem
	[FIX]
		* Change library license to MIT
		* Set fixed size for subsystem name
		* Show class and method name in C++
		* update_subsystem() now clean parent, childs and other pointers
		* YALL_MSG_LEN is now accessible from yall/yall.h
		* Fix crash on create_subsystem() fail
		* Follow Linux libraries naming conventions (yall.so.x.x.x)
		* Check initialization before logging
	[TEST]
		* Updates tests with advanced Criterion features (parameterized tests,
		theories)
		* Refactor logging system
		* Write tests for covering up to 80% at least
		* Add 'resume_coverage' target
	[CI]
		* Deploy release and debug builds
		* Create MSVC 12 CI build