@@ -20,7 +20,6 @@ option(PROJECT_YALL "Build Yall" ON)
 option(PROJECT_YALL_SHARED "Enable shared version" ON)
 option(PROJECT_YALL_STATIC "Enable static version" ON)
 option(PROJECT-MISC_CI_DEPLOY "Special target for continuous integration deployment" OFF)
-option(PROJECT-MISC_COVERAGE "Enable unit test coverage report" OFF)
 option(PROJECT-TESTS_UNIT_TESTS "Enable unit tests build" ON)
 option(PROJECT-TESTS_C_TESTS "Enable C test build" ON)
 option(PROJECT-TESTS_CPP_TESTS "Enable C++ test build" ON)
